Added jQuery, got webcam showing, cleaned app.html

--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -17,9 +17,10 @@ a {
 }
 
 .container {
-    text-align: center;
+	border: 1px solid black;
 }
 
-.subtitle {
-    color: gray;
+#webcam{
+	height: 480px;
+	width: 640px;
 }
